--- a/index.html
+++ b/index.html
@@ -10,19 +10,33 @@
 <body>
     <!-- html -->
     <div id="container">
-        <h3>Methods List</h3>
-    </div>
+        <h3 style="margin-left: 1rem;">List</h3>
+    </div>adverbs
 
     <!-- js -->
     <script src="dist/index.js"></script>
     <script>
-        var container = document.getElementById("container");
-        var list = Object.keys(utils);
-        container.innerHTML += "\<ul\>";
-        list.forEach(function(e, idx) {
-            container.innerHTML += "\<li\>"+ (idx+1) + "\. " + e + "()\<\/li\>";
-        });
-        container.innerHTML += "\<\/ul\>";
+        (function() {
+            var container = document.getElementById("container");
+            var list = Object.keys(utils);
+            var html = "\<ol\>";
+            list.forEach(function(e, idx) {
+                html += "\<li\>" + e + "()\<\/li\>";
+            });
+            html += "\<\/ol\>";
+            container.innerHTML += html;
+        })();
+
+
+        var text1 = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.";
+        var text2 = "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).";
+        var text3 = "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.";
+        var test4 = "You can take this test to know what is your approximate level of grammar in English. Alternatively, you can also take a few of our Use of English tests. If your grade for a Use of English test is 65% or higher, it means that your approximate grammar level in English is the same as that test. For example, if you take a couple of A2 tests and your grades are 65% or higher, it means that your approximate level of grammar is A2, and that you can start working on B1 grammar."
+        var test5 = "Adapted from \"The Colors of Animals\" by Sir John Lubbock in A Book of Natural History (1902, ed. David Starr Jordan) The color of animals is by no means a matter of chance; it depends on many considerations, but in the majority of cases tends to protect the animal from danger by rendering it less conspicuous. Perhaps it may be said that if coloring is mainly protective, there ought to be but few brightly colored animals. There are, however, not a few cases in which vivid colors are themselves protective. The kingfisher itself, though so brightly colored, is by no means easy to see. The blue harmonizes with the water, and the bird as it darts along the stream looks almost like a flash of sunlight. Desert animals are generally the color of the desert. Thus, for instance, the lion, the antelope, and the wild donkey are all sand-colored. “Indeed,” says Canon Tristram, “in the desert, where neither trees, brushwood, nor even undulation of the surface afford the slightest protection to its foes, a modification of color assimilated to that of the surrounding country is absolutely necessary. Hence, without exception, the upper plumage of every bird, and also the fur of all the smaller mammals and the skin of all the snakes and lizards, is of one uniform sand color.” The next point is the color of the mature caterpillars, some of which are brown. This probably makes the caterpillar even more conspicuous among the green leaves than would otherwise be the case. Let us see, then, whether the habits of the insect will throw any light upon the riddle. What would you do if you were a big caterpillar? Why, like most other defenseless creatures, you would feed by night, and lie concealed by day. So do these caterpillars. When the morning light comes, they creep down the stem of the food plant, and lie concealed among the thick herbage and dry sticks and leaves, near the ground, and it is obvious that under such circumstances the brown color really becomes a protection. It might indeed be argued that the caterpillars, having become brown, concealed themselves on the ground, and that we were reversing the state of things. But this is not so, because, while we may say as a general rule that large caterpillars feed by night and lie concealed by day, it is by no means always the case that they are brown; some of them still retaining the green color. We may then conclude that the habit of concealing themselves by day came first, and that the brown color is a later adaptation.";
+        var obj1 = { id: 1, key: 2, width: 5 };
+        var obj2 = { name: "James", class: 1, reg: /13214/gi, date: new Date() };
+        var arr = [1, 2, 3, 4, 5];
+
     </script>
 </body>
 
