--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
+    <style>
+        li{
+            margin-top: 4px;
+            margin-bottom: 4px;
+        }
+    </style>
 </head>
 
 <body>
     <!-- html -->
     <div id="container">
         <h3 style="margin-left: 1rem;">List</h3>
-    </div>adverbs
+    </div>
+
+    <div id="canv"></div>
 
     <!-- js -->
     <script src="dist/index.js"></script>
     <script>
         (function() {
+            return false;
             var container = document.getElementById("container");
             var list = Object.keys(utils);
             var html = "\<ol\>";
@@ -35,7 +44,75 @@
         var test5 = "Adapted from \"The Colors of Animals\" by Sir John Lubbock in A Book of Natural History (1902, ed. David Starr Jordan) The color of animals is by no means a matter of chance; it depends on many considerations, but in the majority of cases tends to protect the animal from danger by rendering it less conspicuous. Perhaps it may be said that if coloring is mainly protective, there ought to be but few brightly colored animals. There are, however, not a few cases in which vivid colors are themselves protective. The kingfisher itself, though so brightly colored, is by no means easy to see. The blue harmonizes with the water, and the bird as it darts along the stream looks almost like a flash of sunlight. Desert animals are generally the color of the desert. Thus, for instance, the lion, the antelope, and the wild donkey are all sand-colored. “Indeed,” says Canon Tristram, “in the desert, where neither trees, brushwood, nor even undulation of the surface afford the slightest protection to its foes, a modification of color assimilated to that of the surrounding country is absolutely necessary. Hence, without exception, the upper plumage of every bird, and also the fur of all the smaller mammals and the skin of all the snakes and lizards, is of one uniform sand color.” The next point is the color of the mature caterpillars, some of which are brown. This probably makes the caterpillar even more conspicuous among the green leaves than would otherwise be the case. Let us see, then, whether the habits of the insect will throw any light upon the riddle. What would you do if you were a big caterpillar? Why, like most other defenseless creatures, you would feed by night, and lie concealed by day. So do these caterpillars. When the morning light comes, they creep down the stem of the food plant, and lie concealed among the thick herbage and dry sticks and leaves, near the ground, and it is obvious that under such circumstances the brown color really becomes a protection. It might indeed be argued that the caterpillars, having become brown, concealed themselves on the ground, and that we were reversing the state of things. But this is not so, because, while we may say as a general rule that large caterpillars feed by night and lie concealed by day, it is by no means always the case that they are brown; some of them still retaining the green color. We may then conclude that the habit of concealing themselves by day came first, and that the brown color is a later adaptation.";
         var obj1 = { id: 1, key: 2, width: 5 };
         var obj2 = { name: "James", class: 1, reg: /13214/gi, date: new Date() };
-        var arr = [1, 2, 3, 4, 5];
+        var arr1 = [1, 2, 3, 4, 5];
+        var arr1 = ["A","B","C","D","E"];
+
+
+        var canv = new utils.MyCanvas();
+        document.getElementById("canv").appendChild(canv.get())
+
+        var animation = new utils.MyAnimation(function() {
+            canv.clear();
+
+            var deg = Math.floor(i)
+            var p1 = canv.getVertex(x, y, x-0.5*w, y-0.5*h, deg);
+            var p2 = canv.getVertex(x, y, x+0.5*w, y-0.5*h, deg);
+            var p3 = canv.getVertex(x, y, x-0.5*w, y+0.5*h, deg);
+            var p4 = canv.getVertex(x, y, x+0.5*w, y+0.5*h, deg);
+
+            canv.drawText("p1", p1.x, p1.y);
+            canv.drawText("p2", p2.x, p2.y);
+            canv.drawText("p3", p3.x, p3.y);
+            canv.drawText("p4", p4.x, p4.y);
+
+            canv.drawText(deg, (p1.x + p4.x) * 0.5, (p1.y + p4.y) * 0.5);
+
+            var top = canv.drawStroke(p1.x, p1.y, p2.x, p2.y);
+            var bottom = canv.drawStroke(p3.x, p3.y, p4.x, p4.y);
+            var left = canv.drawStroke(p1.x, p1.y, p3.x, p3.y);
+            var right = canv.drawStroke(p2.x, p2.y, p4.x, p4.y);
+
+            if (i > 180) {
+                j = -1;
+            }
+            if (i < -180) {
+                j = 1;
+            }
+            j = j + j * acc;
+            i += j;
+        }, 10);
+        var i = 0;
+        var j = 1;
+        var x = 75;
+        var y = 75;
+        var w = 100;
+        var h = 100;
+        var acc = 0.02;
+        function startAnimation() {
+            animation.start();
+        }
+        function pauseAnimetion() {
+            animation.pause();
+        }
+        function stopAnimetion() {
+            animation.stop();
+        }
+
+        startAnimation();
+
+        setTimeout(function() {
+            pauseAnimetion();
+        }, 1000);
+
+        setTimeout(function() {
+            startAnimation();
+        }, 2000);
+
+        setTimeout(function() {
+            stopAnimetion();
+            console.log(animation)
+        }, 3000);
+        
 
     </script>
 </body>
