--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
 
                 i += j;
 
+                document.getElementById("count-animation").innerHTML = Math.floor(deg/90)*90;
+                
+
                 // if (i > 360) {
                 //     stopAnimation();
                 // }
