--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             var CANVAS_WIDTH = 262;
             var CANVAS_HEIGHT = 262;
             var OFFSET = 12;
+            var ORIGIN_X = CANVAS_WIDTH*0.5;
+            var ORIGIN_Y = CANVAS_HEIGHT*0.5;
 
             /* init canvas */
             var canv = new utils.MyCanvas();
@@ -86,10 +88,17 @@
                     canv.drawLine(k, 0, k, CANVAS_WIDTH);
                     canv.drawLine(0, k, CANVAS_WIDTH, k);
                 }
-
+                /* draw origin */
+                canv.drawCircle(ORIGIN_X-2, ORIGIN_X-2, 2, { fill: true, color: "black"})
+                canv.drawText(ORIGIN_X+4, ORIGIN_Y-4, "(0,0)", { color: "black"})
+                canv.drawText(CANVAS_WIDTH-14, ORIGIN_Y-4, "X", { color: "black"})
+                canv.drawText(10, ORIGIN_Y-4, "-X", { color: "black"})
+                canv.drawText(ORIGIN_X+4, 18, "Y", { color: "black"})
+                canv.drawText(ORIGIN_X+4, CANVAS_HEIGHT-10, "-Y", { color: "black"})
+ORIGIN_X
                 /* init rectangle */
                 var rect = new utils.MyRectangle(100, 100)
-                    .origin(CANVAS_WIDTH*0.5, CANVAS_WIDTH*0.5)
+                    .origin(ORIGIN_X, ORIGIN_Y)
                     .resize(50, -100)
                     .translate(12.5, -12.5)
                     .rotate(deg);
@@ -97,8 +106,6 @@
                 /* get state */
                 var state = rect.getState();
 
-                /* draw origin */
-                canv.drawCircle(state.origin.x-2, state.origin.y-2, 2, { fill: true, color: "black"})
                 /* draw rectangle */
                 canv.drawRect(state.x, state.y, state.width, state.height, { color: "red", rotate: deg })
                 /* draw bounding box */
@@ -285,13 +292,14 @@
             var func = function(prev, curr, index) {
                 return new Promise(function(resolve, reject) {
                     setTimeout(function() {
+                        console.log("utils.execPromises", prev, curr, index);
                         resolve(prev + curr);
-                    }, 100);
+                    }, 1000);
                 });
             }
 
             var res = await utils.execPromises(arr, func, initialValue);
-            console.log("utils.execPromises", res);
+            console.log("utils.execPromises", res, "END", "END");
         })();
        
 
