--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                     rotate: {
                         x: PIVOT_X,
                         y: PIVOT_Y,
-                        value: deg
+                        degree: deg
                     },
                     rotateX: {
                         x: PIVOT_X,
                         y: PIVOT_Y,
-                        value: deg
+                        degree: deg
                     }
                 })
                 canv.drawRect(state2.boundingBox.x, state2.boundingBox.y, state2.boundingBox.width, state2.boundingBox.height, { color: "blue" })
