--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
             var res = utils.parseKorean(str2);
 
-            console.log(res)
+            console.log("utils.parseKorean", res)
         })();
 
     </script>
