--- a/index.html
+++ b/index.html
@@ -330,6 +330,23 @@
             console.log("utils.parseKorean", res)
         })();
 
+        /* encode */
+        (function() {
+            // var str = "Lorem Ipsum is simply dummy text of the printing and typesetting industry! Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.";
+            var str = "대통령으로 선거될 수 있는 자는 국회의원의 피선거권이 있고 선거일 현재 40세에 달하여야 한다. 이 헌법시행 당시의 대법원장과 대법원판사가 아닌 법관은 제1항 단서의 규정에 불구하고 이 헌법에 의하여 임명된 것으로 본다. 대통령은 국회에 출석하여 발언하거나 서한으로 의견을 표시할 수 있다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등 직무집행과 관련하여 받은 손해에 대하여는 법률이 정하는 보상외에 국가 또는 공공단체에 공무원의 직무상 불법행위로 인한 배상은 청구할 수 없다. 감사원은 원장을 포함한 5인 이상 11인 이하의 감사위원으로 구성한다. 근로자는 근로조건의 향상을 위하여 자주적인 단결권·단체교섭권 및 단체행동권을 가진다."
+
+            var res = utils.stringToUnicode(str);
+            var res2 = utils.unicodeToHex(res);
+
+            console.log(res);
+            console.log(res2);
+        })();
+
+        /* MyImages */
+        (function() {
+            var src = "./src/1.jpg";
+        })();
+
     </script>
 </body>
 
