--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
             var res = utils.stringToUnicode(str);
             var res2 = utils.unicodeToHex(res);
 
-            console.log(res);
-            console.log(res2);
+            console.log("utils.stringToUnicode",res);
+            console.log("utils.unicodeToHex", res2);
         })();
 
         /* MyImages */
