--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <button id="stop-animation">Pause</button>
     <button id="toggle-animation">Toggle</button>
 
+    <img src="./src/1.jpg">
+
     <!-- js -->
     <script src="dist/index.js"></script>
     <script>
@@ -340,11 +342,6 @@
 
             console.log("utils.stringToUnicode",res);
             console.log("utils.unicodeToHex", res2);
-        })();
-
-        /* MyImages */
-        (function() {
-            var src = "./src/1.jpg";
         })();
 
     </script>
