--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     <button id="stop-animation">Pause</button>
     <button id="toggle-animation">Toggle</button>
 
-    <img src="./src/1.jpg">
-
     <!-- js -->
     <script src="dist/index.js"></script>
     <script>
@@ -50,7 +48,7 @@
         var obj1 = { id: 1, key: 2, attr: { width: 5, height: 10 }, array: [1, 2, 3, 4, 5]};
         var arr1 = [1, 2, 3, 4, 5];
         var arr2 = ["A","B","C","D","E"];
-        var img = 
+        var img;
 
         /* loadImage */
         utils.loadImage("./src/1.jpg", function(err, res) {
@@ -342,6 +340,23 @@
 
             console.log("utils.stringToUnicode",res);
             console.log("utils.unicodeToHex", res2);
+        })();
+
+        /* setTimeOutPromise */
+        (async function() {
+            var res = await utils.setTimeoutPromise(function() {
+                return "Delay 1000";
+            }, 1000);
+            console.log("utils.setTimeoutPromise", res);
+        })();
+
+        /* imageData */
+        (async function() {
+            await utils.setTimeoutPromise(function() {
+                return;
+            }, 1000);
+
+            var res = utils.getImageData(img);
         })();
 
     </script>
