--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
             }, 1000);
 
             var res = utils.getImageData(img);
+            console.log("utils.getImageData", res);
         })();
 
     </script>
